@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.util.StringUtils;
 
 @Configuration
 public class RedissonConfig {
@@ -32,7 +33,7 @@ public class RedissonConfig {
         .setConnectionPoolSize(10).setTimeout(2000).setRetryAttempts(3)
         .setRetryDelay(new EqualJitterDelay(Duration.ofMillis(500), Duration.ofMillis(1000)));
 
-    if (!password.isBlank()) {
+    if (password != null && !password.trim().isEmpty()) {
       config.setPassword(password);
     }
 
